--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,29 +1,28 @@
 @font-face {
-  font-family: 'OpenSans Thin';
-  src:  url("../assets/fonts/OpenSans/OpenSans-Light.woff2") format('woff2'),
-        url('../assets/fonts/OpenSans/OpenSans-Light.woff') format('woff');
+  font-family: "OpenSans Thin";
+  src: url("../assets/fonts/OpenSans/OpenSans-Light.woff2") format("woff2"),
+    url("../assets/fonts/OpenSans/OpenSans-Light.woff") format("woff");
 }
 @font-face {
-  font-family: 'OpenSans Regular';
-  src:  url("../assets/fonts/OpenSans/OpenSans-Regular.woff2") format('woff2'),
-        url('../assets/fonts/OpenSans/OpenSans-Regular.woff') format('woff');
+  font-family: "OpenSans Regular";
+  src: url("../assets/fonts/OpenSans/OpenSans-Regular.woff2") format("woff2"),
+    url("../assets/fonts/OpenSans/OpenSans-Regular.woff") format("woff");
 }
 @font-face {
-  font-family: 'RobotoSlab Regular';
-  src:  url("../assets/fonts/Roboto/RobotoSlab-Regular.woff2") format('woff2'),
-        url('../assets/fonts/Roboto/RobotoSlab-Regular.woff') format('woff');
+  font-family: "RobotoSlab Regular";
+  src: url("../assets/fonts/Roboto/RobotoSlab-Regular.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/RobotoSlab-Regular.woff") format("woff");
 }
 @font-face {
-  font-family: 'RobotoSlab Thin';
-  src:  url("../assets/fonts/Roboto/RobotoSlab-Thin.woff2") format('woff2'),
-        url('../assets/fonts/Roboto/RobotoSlab-Thin.woff') format('woff');
+  font-family: "RobotoSlab Thin";
+  src: url("../assets/fonts/Roboto/RobotoSlab-Thin.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/RobotoSlab-Thin.woff") format("woff");
 }
 @font-face {
-  font-family: 'Helveticaneue Thin';
-  src:  url("../assets/fonts/Helveticaneue/helveticaneue.woff2") format('woff2'),
-        url('../assets/fonts/Helveticaneue/helveticaneue.woff') format('woff');
+  font-family: "Helveticaneue Thin";
+  src: url("../assets/fonts/Helveticaneue/helveticaneue.woff2") format("woff2"),
+    url("../assets/fonts/Helveticaneue/helveticaneue.woff") format("woff");
 }
-
 
 html {
   min-height: 100%;
@@ -37,5 +36,5 @@ body {
   padding: 0;
   overflow-x: hidden !important;
   min-height: 100%;
-  background: #986cef
+  background: #fff;
 }
